--- a/public/css/search.css
+++ b/public/css/search.css
@@ -22,19 +22,62 @@ body {
     position: relative;
 }
 
-img.pic1 {
+.font-img {
     position: absolute;
     width: 375px;
-    height: 325px;
-    top: -137px;
-    left: -330px;
+    top: -100px;
+    left: 50px;
+}
+@media (max-width: 1250px){
+    .font-img{
+        width: 300px;
+        top: -100px;
+        left: 50px;
+}
+}
+@media (max-width: 1150px){
+    .font-img{
+}
+}
+@media (max-width: 880px){
+    .font-img{
+}
+}
+@media (max-width: 660px){
+    .font-img{
+}
 }
 
-img.pic2 {
+.bottom-right-img {
     position: absolute;
-    bottom: -163px;
-    right: -320px;
+    bottom: -100px;
+    right: 120px;
 }
+@media (max-width: 1250px){
+    .bottom-right-img{
+        height: 300px;
+        bottom: -100px;
+        right: 50px;
+}
+}
+/* @media (max-width: 1150px){
+    .bottom-right-img{
+        bottom: -160px;
+        right: -250px;
+}
+} */
+/* @media (max-width: 880px){
+    .bottom-right-img{
+        bottom: -160px;
+        right: -250px;
+}
+} */
+/* @media (max-width: 660px){
+    .bottom-right-img{
+        bottom: -160px;
+        right: -250px;
+}
+} */
 
 .body {
     font-family: "せのびレギュラー";
@@ -42,31 +85,45 @@ img.pic2 {
     flex-direction: row;
     text-align: center;
     position: relative;
+    width: 100%;
     margin: 142px 0;
 }
 
 form {
     width: 1448px;
-    margin: 0 auto;
+    margin: 0 150px;
+}
+@media (max-width: 880px){
+    form{
+        margin: 0 100px;
+}
+}
+@media (max-width: 660px){
+    form{
+        margin: 0 50px;
+}
 }
 
-.search {
+.search-container {
     height: 539px;
+    width: 100%;
     background-image: url("/img/search-back.png");
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    text-align: center;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 50px;
+    top: 60%;
 }
 
-.serchin {
+.search {
     height: 383px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     margin-top: -8px;
-    position: relative;
 }
 
 .content {
@@ -75,13 +132,13 @@ form {
     align-items: center;
 }
 
-.one {
+/* .one {
     display: flex;
     flex-direction: column;
     width: 385px;
     text-align: center;
-    /* margin-top: -9px; */
-}
+     margin-top: -9px; 
+} */
 
 label {
     color: #fff;
@@ -93,6 +150,21 @@ label {
 input.free {
     font-size: 18px;
     padding-left: 10px;
+}
+@media (max-width: 1150px){
+    input.free{
+        font-size: 16px;
+}
+}
+@media (max-width: 880px){
+    input.free{
+        font-size: 14px;
+}
+}
+@media (max-width: 660px){
+    input.free{
+        font-size: 13px;
+}
 }
 
 input.base {
@@ -116,14 +188,41 @@ input.base option {
     vertical-align: middle;
 }
 
-.two {
+.choice-area {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     width: 960px;
     margin-bottom: 36px;
 }
+@media (max-width: 1300px){
+    .choice-area{
+        width: 760px;
+}
+}
+@media (max-width: 1100px){
+    .choice-area{
+        width: 550px;
+}
+}
+@media (max-width: 880px){
+    .choice-area{
+        width: 500px;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        margin: 0 auto;
+}
+}
+@media (max-width: 800px){
+    .choice-area{
+        width: 350px;
 
+}
+}
+@media (max-width: 660px){
+    .choice-area{
+}
+}
 .free {
     line-height: 2;
 }
@@ -188,12 +287,29 @@ select {
     width: 236px;
     margin-top: -1px;
 }
+@media (max-width: 1100px){
+    select{
+        width: 175px;
+        height: 35px;
+        font-size: 15px;
+        margin: 0 5px;
 
-button {
-    padding: 0;
 }
-
-.button {
+}
+@media (max-width: 880px){
+    select{
+        width: 120px;
+        height: 35px;
+        font-size: 10px;
+        padding: 5px;
+}
+}
+@media (max-width: 660px){
+    select{
+}
+}
+.search-btn {
+    padding: 0;
     display: inline;
     width: 255px;
     margin: 0 auto;
@@ -201,12 +317,12 @@ button {
     border: 0;
 }
 
-.button:hover {
+.search-btn:hover {
     opacity: 0.8;
     cursor: pointer;
 }
 
-.button:active {
+.search-btn:active {
     position: relative;
     top: 2px;
 }
