--- a/public/css/search_show.css
+++ b/public/css/search_show.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(#355469, #1d2d39);
+    /* background: linear-gradient(#355469, #1d2d39); */
 }
 /* back-btn */
 .back-btn {
@@ -17,6 +17,11 @@ body {
     text-decoration: none;
     transition: all 0.5s;
 }
+@media (max-width: 500px){
+    .back-btn a {
+        font-size: 13px;
+}
+}
 .back-btn a:hover {
     color: #fff;
     opacity: 0.5;
@@ -31,14 +36,31 @@ body {
     border-radius: 40px;
     margin: 0 150px;
 }
-
+@media (max-width: 1000px){
+    .main-container {
+        margin: 0 50px;
+}
+}
+@media (max-width: 600px){
+    .main-container {
+        padding: 30px;
+}
+}
+@media (max-width: 500px){
+    .main-container {
+        padding: 25px;
+        margin: 0 30px;
+}
+}
 .main {
     flex-direction: column;
     background-color: #d3d7da;
     border-radius: 40px;
     padding: 43px 0;
     border: 1px solid #9e8b73;
+
 }
+
 /* main-top */
 
 .main-top {
@@ -58,6 +80,25 @@ body {
     margin-top: 50px;
     margin-bottom: 30px;
 }
+@media (max-width: 500px){
+    .top-title {
+        font-size: 18px;
+}
+    .top-name {
+        font-size: 30px;
+        margin-top: 30px;
+        margin-bottom: 15px;
+    }
+}
+@media (max-width: 400px){
+    .top-title {
+        font-size: 12px;
+}
+    .top-name {
+        font-size: 20px;
+        margin-top: 25px;
+    }
+}
 /* .container2 {
     display: flex;
     justify-content: space-around;
@@ -67,25 +108,40 @@ body {
 /* main-middle */
 
 .main-middle {
-    width: 375px;
-    position: relative;
+    width: 300px;
     margin: 0 auto 80px;
 }
-.main-middle-img {
-    width: 375px;
-    height: 445px;
+@media (max-width: 1140px){
+    .main-middle{
+        display: flex;
+        flex-direction: column;
+}
+}
+@media (max-width: 500px){
+    .main-middle{
+        margin: 0 auto;
+        width: 100%;
+}
 }
 .middle-date {
-    position: absolute;
-    right: -350px;
-    bottom: 22px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     width: 300px;
     height: 180px;
-    font-size: 20px;
     color: #355469;
+}
+@media (max-width: 500px){
+    .middle-date{
+        width: 200px;
+        margin: 0 auto;
+}
+}
+@media (max-width: 400px){
+    .middle-date{
+        width: 120px;
+        height: 250px;
+}
 }
 .middle-date h5 {
     width: 88px;
@@ -98,10 +154,13 @@ body {
 .middle-base, .middle-taste, .middle-arc {
     display: flex;
     justify-content: space-between;
-    width: 200px;
     height: 50px;
 }
-
+@media (max-width: 400px){
+    .middle-base, .middle-taste, .middle-arc {
+        flex-direction: column;
+}
+}
 .base, .taste, .arc {
     width: 110px;
     height: 50px;
@@ -109,11 +168,39 @@ body {
     font-family: "Hiragino Kaku Gothic ProN";
     font-size: 20px;
 }
+@media (max-width: 500px){
+    .middle-date h5 {
+        font-size: 15px;
+        width: 60px;
+        height: 40px;
+        padding: auto 0;
+}
+    .base, .taste, .arc {
+        font-size: 15px;
+    }
+}
+@media (max-width: 400px){
+    .middle-date h5 {
+        font-size: 13px;
+        width: 120px;
+}
+}
 /* main-bottom */
 
 .main-bottom h6 {
     font-size: 30px;
     margin: 30px 0;
+}
+@media (max-width: 500px){
+    .main-bottom h6 {
+        font-size: 20px;
+        margin: 15px 0;
+}
+}
+@media (max-width: 500px){
+    .main-bottom h6 {
+        padding-top: 50px;
+}
 }
 .cocktail-detail {
     color: black;
@@ -134,6 +221,28 @@ body {
     margin: 0 auto;
     margin-top: 50px;
 }
+@media (max-width: 1100px){
+    .hr {
+        width: 450px;
+}
+}
+@media (max-width: 700px){
+    .hr {
+        width: 350px;
+}
+}
+@media (max-width: 600px){
+    .hr {
+        width: 250px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+}
+}
+@media (max-width: 400px){
+    .hr {
+        width: 120px;
+}
+}
 .ingredient {
     margin: 10px 0;
 }
@@ -151,7 +260,22 @@ body {
     width: 400px;
     margin: 0 auto;
 }
-.make {
+@media (max-width: 700px){
+    .hr-2 {
+        width: 350px;
+}
+}
+@media (max-width: 600px){
+    .hr-2 {
+        width: 250px;
+}
+}
+@media (max-width: 600px){
+    .hr-2 {
+        width: 120px;
+}
+}
+.main-bottom p {
     color: black;
     width: 550px;
     margin-top: 40px;
@@ -163,6 +287,28 @@ body {
     letter-spacing: 3px;
     font-size: 16px;
     font-family: "Hiragino Kaku Gothic ProN";
+}
+@media (max-width: 1000px){
+    .main-bottom p {
+        width: 400px;
+}
+}
+@media (max-width: 650px){
+    .main-bottom p {
+        width: 300px;
+}
+}
+@media (max-width: 500px){
+    .main-bottom p {
+        width: 250px;
+        font-size: 13px;
+}
+}
+@media (max-width: 400px){
+    .main-bottom p {
+        width: 200px;
+        font-size: 11px;
+}
 }
 
 /* back-btn-bt */
@@ -180,6 +326,11 @@ body {
     color: #fff;
     text-decoration: none;
     transition: all 0.5s;
+}
+@media (max-width: 500px){
+    .back-btn-bt a {
+        font-size: 13px;
+}
 }
 .back-btn-bt a:hover {
     color: #fff;
