--- a/public/css/edit.css
+++ b/public/css/edit.css
@@ -160,29 +160,59 @@ html { scroll-behavior: smooth;}
     width: auto;
 }
 
-.preview {
+#preview {
     width: 261px;
     height: 377px;
     margin: 0 auto;
     margin-top: 57px;
 }
 @media screen and (max-width:1100px){
-    .preview {
+    #preview {
         width: 220px;
         height: 310px;
     }
 }
 @media screen and (max-width:520px){
-    .preview {
+    #preview {
         width: 190px;
         height: 270px;
     }
 }
 @media screen and (max-width:520px){
-    .preview {
+    #preview {
         margin-top: 30px;
     }
 }
+
+#preview img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+
+/* labelをボタンらしく */
+.upload-label {
+    display: inline-block;
+    cursor: pointer; /* カーソルを指に */
+    margin: 1em 0; /* まわりの余白 */
+    padding: .7em 1em; /* 文字まわりの余白 */
+    line-height: 1.4; /* 行間 */
+    background: #3e8bff; /* 背景色 */
+    color: #FFF; /* 文字色 */
+    font-size: 0.95em; /* フォントサイズ */
+    border-radius: 2.5em; /* 角の丸み */
+    transition: 0.2s; /* ホバーをなめらかに */
+  }
+  /* ホバー時 */
+  .upload-label:hover {
+    box-shadow: 0 8px 10px -2px rgba(0, 0, 0, 0.2); /* 影を表示 */
+  }
+  /* inputは隠す */
+  .upload-label input {
+    display: none;
+  }
+
+
 
 .top-right {
     width: 59%;
